# GameBoyEmulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile.ps1  vcpkg-configuration.json  vcpkg.json
.github/workflows/: multiplatform-cmake-ci.yml
.github/workflows/templates/: download-vcpkg.yml  install-vcpkg-linux.yml  install-vcpkg-windows.yml
include/logger/: ILogger.hpp  NullLogger.hpp  QtLogger.hpp
src/: main.cpp  main.qml
src/logger/: CMakeLists.txt  ILogger.cpp  ILogger.hpp  NullLogger.cpp  QtLogger.cpp  QtLogger.hpp
tests/: CMakeLists.txt
tests/Logger/: test_null_logger.cpp
